--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>sherlitaf</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-image: url(sunflowerrr.jpg)">
-<h1><p align="center">KENALAN YUK!</p></h1>
+<body>
+<div class="content">
+<h1 align="center">KENALAN YUK!</h1>
+<img src="uy2.jpg" style="width: 664px"> <img src="uy3.jpg" style="width: 664px">
 <p>Nama Lengkap			: Sherlita Fadilah</p>
 <p>Nama Panggilan		: Lita</p>
 <p>Tempat/Tanggal Lahir	: Bogor/31 Desember 2001</p>
@@ -13,10 +16,10 @@
 <p>Kelas				: XI-I</p>
 <p>Hobbi				: Menggambar, Olahraga (Voli)</p>
 <p>Cita-Cita			: Analis bidang perminyakan </p>
-<h3><p align="center">TENTANG SAYA</p></h3>
+<h3 align="center">TENTANG SAYA</h3>
 <p>Lahir sebagai anak ke-3 dari 3 bersaudara a.k.a bungsu di Rs. Ciawi dengan bobot 3,3kg pukul 09.35 wib alhamdulillah tanpa cacat sedikitpun. Dengan catatan pipi sudah seperti yang anda lihat sekarang. Sangatt menyukai Harry Potter especially Harry Potter and The Prisoner Of Azkaban. Juga suka sekali dengan apapun yang berkesan vintage atau retro, suka warna kuning, hijau, hitam, putih dan abu-abu. Suatu kesenangan juga bagi saya mengikuti sebuah organisai, berbagi pendapat dan merencanakan sesuatu memiliki daya tarik tersendiri bagi saya.Terlahir di akhir bulan desember menjadikan saya dibawah naungan Capricorn yang 'katanya' memiliki bakat kepemimpinan, tentang yang satu itu cukup benar adanya bagi saya. Hal lain yang menarik bagi saya adalah segala sesuatu yang berbau seni, lebih tepatnya menggambar. Mengekspesikan apa yang saya lihat atau apa yang saya inginkan lewat gambar memiliki daya tarik tersendiri bagi saya, juga saya mulai menyukai membuat sajak-sajak singkat tentang apa saja yang saya pikirkan.</p>
-<p> Wanna know more?</p>
+<p> Wanna know more?
 <p>follow me on instagram : sherlitaf</p>
+</div>
 </body>
 </html>
-<img src="lita.gif" style="width: 400px ; height: 300px"> <img src="LITA HOBBY.xcf" style="width: 400px ; height: 300px"> <img src="lita revisi idola.xcf"style="width: 400px ; height: 300px">
