--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+		<nav class="navbar navbar-dark bg-dark">
+  <!-- Navbar content -->
+</nav>
 <div class="content">
 <h1 align="center">KENALAN YUK!</h1>
 <img src="uy2.jpg" style="width: 664px"> <img src="uy3.jpg" style="width: 664px">
