--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<title>sherlitaf</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	
 </head>
 <body>
-		<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark">
   <!-- Navbar content -->
 </nav>
 <div class="content">
